@@ -1,3 +1,8 @@
+2007-12-14  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab.c: start processing the uri given on command line in
+	an idle so that the main loop is properly started. Fixes #497415.
+
 2007-12-13  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* help/C/baobab.xml:
